welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:11: error: not found: type color
def faireV(c:color)  {
             ^MethodsPicture:25: error: not found: type ORANGE
  var c = Color:ORANGE ;
                ^MethodsPicture:25: error: object java.awt.Color is not a value
  var c = Color:ORANGE ;
          ^